force-app/main/default/objects/PropertyMember__c/PropertyMember__c.object-meta.xml
<CustomObject>
    <label>Membro da Propriedade</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Número do Membro da Propriedade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros da Propriedade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>