force-app/main/default/objects/PropertyMember__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Membros da Propriedade</relationshipLabel>
    <relationshipName>Membros_da_Propriedade</relationshipName>
    <type>Lookup</type>
</CustomField>