force-app/main/default/objects/PropertyMember__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>