force-app/main/default/objects/PropertyMember__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field indicates whether the contract member is active</description>
    <label>Relação Ativa?</label>
    <type>Checkbox</type>
</CustomField>