force-app/main/default/objects/PropertyMember__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Membros da Propriedade</relationshipLabel>
    <relationshipName>Membros_da_Propriedade</relationshipName>
    <type>Lookup</type>
</CustomField>